--- a/Index/club.html
+++ b/Index/club.html
@@ -9,136 +9,142 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
   <title>Amicale Motos Cyclos Occitanie</title>
-  <meta name="description" content="Retrouvez toutes les informations concernant la création du club ainsi que les dirigeants de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <meta name="description" content="cette page traite des différentes informations du club de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
-<header>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="Nav">
-    <div class="container">
-      <div class="row">
-        <div class="col pt-1">
-          <a class="navbar-brand text-warning" id="logo">Menu de Navigation</a>
-        </div>
-        <div class="col" id="btn_navbar">
-          <button class="navbar-toggler p-2" type="button" data-toggle="collapse" data-target="#navbar_content" aria-controls="navbar_content"      aria-expanded="false" aria-label="Toggle navigation" id="button">
-            <span class="navbar-toggler-icon btn-sm"></span>
-          </button>
-        </div>
-      </div>
-      <div class="collapse navbar-collapse justify-content-center" id="navbar_content">
-        <ul class="navbar-nav nav-fill ">
-          <li class="nav-item">
-            <a class="nav-link" href="/Index/accueil.html">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
-                <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
-              </svg> Accueil</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Index/evenement.html"> 
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewBox="0 0 16 16">
-                <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
-                <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-              </svg> Evènements</a></li>
-          <li class="nav-item">
-            <a class="nav-link active disabled text-warning" aria-current="page" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewBox="0 0 16 16">
-                <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
-              </svg> Le club</a></li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Index/photos.html">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
-                <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.030l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
-              </svg> Photos</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16">
-              <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
-              </svg> Archives</a>
-              <ul class="dropdown-menu bg-dark mt-1" id="dropdown_archives">
-                <li><a class="dropdown-item bg-dark text-white text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
-                <li><a class="dropdown-item bg-dark text-white text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
-              </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
 <body class="d-flex flex-column">
-  <main class="flex-shrink-0"> 
-    <div class="container mb-2">
-      <section>
-        <div class="club mx-1">
-          <h1 class="text-center my-3">le club</h1>
-          <article class="création_club">
-            <div class="row mx-1">
-              <div class="col px-0">
-                <div class="card">
-                  <div class="card-header text-center">Création du club</div>
-                  <div class="card-body mt-2 pt-2">
-                    <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
-                    <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </article>
-          <article class="modif_club mt-2">
-            <div class="row mx-1">
-              <div class="col px-0">
-                <div class="card">
-                  <div class="card-header text-center">Modification du club</div>
-                  <div class="card-body mt-2 pt-2">
-                    <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
-                    <p class="card-text text-decoration-underline">Tarif adhésion club :</p>
-                    <p class="card-text"><strong><mark> 20€</strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
-                    <p class="card-text"> Concernant le challenge UFOLEP vous trouverez toutes les informations sur le site
-                      <a href="http://www.ufocross.caubet.eu/"> Ufocross.</a>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </article>
-          
-          <article class="statuts_club mt-2">
-            <div class="row mx-1">
-              <div class="col px-0">
-                <div class="card">
-                  <div class="card-header text-center text-danger">📜 Les statuts du club 📜</div>
-                  <div class="card-body">
-                    <ul class="list-group mt-2">
-                      <li class="list-group-item"><h5>Président :</h5>
-                        <p><b>SAINT-JOLY</b> Jean pierre <a href="mailto:j.pierrejoly@sfr.fr">📧</a></p>
-                      </li>
-                      <li class="list-group-item"><h5>Vices Président :</h5>
-                        <p><b>PEREZ</b> Louis <br> & <br> <b>VERGE</b> Gérard </p>
-                      </li>
-                      <li class="list-group-item"><h5>Trésorier :</h5>
-                        <p><b>SAINT-JOLY</b> Stéphan <a href="mailto:migdle@hotmail.com">📧</a></p>
-                      </li>
-                      <li class="list-group-item"><h5>Secrétaire :</h5>
-                        <p><b>VERGE</b> Elisabeth</p>
-                      </li>
-                      <li class="list-group-item"><h5>Conseillers Technique :</h5>
-                        <p><b>VIGNAUX</b> Michel <br> & <br> <b>GIROLA</b> Joël</p>
-                      </li>
-                      <li class="list-group-item"><h5>Formateur :</h5>
-                        <p><b>VERGE</b> Gérard</p>
-                      </li>
-                    </ul>
-                  </div>
-              </div>
-              </div>
-            </div>
-          </article>
-          
+  <div class="container px-0">
+    <header>
+      <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="Nav">
+        <div class="row no-gutters m-auto ">
+          <div class="col">
+            <a class="navbar-brand text-warning" id="logo">Menu de Navigation</a>
+          </div>
+          <div class="col" id="btn_navbar">
+            <button class="navbar-toggler p-2" type="button" data-toggle="collapse" data-target="#navbar_content" aria-controls="navbar_content"      aria-expanded="false" aria-label="Toggle navigation" id="button">
+              <span class="navbar-toggler-icon btn-sm"></span>
+            </button>
+          </div>
         </div>
-      </section>
-    </div>
-  </main>
+        <div class="collapse navbar-collapse pt-2" id="navbar_content">
+            <ul class="navbar-nav nav-fill ">
+              <li class="nav-item">
+                <a class="nav-link" href="/Index/accueil.html">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
+                    <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+                  </svg> Accueil
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Index/evenement.html"> 
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3-event text-success" viewBox="0 0 16 16">
+                    <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
+                    <path d="M12 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                  </svg> Evènements
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active disabled text-warning" aria-current="page" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bicycle " viewBox="0 0 16 16">
+                    <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.303z"/>
+                  </svg> Le club
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Index/photos.html">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-images" viewBox="0 0 16 16">
+                    <path d="M4.502 9a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
+                    <path d="M14.002 13a2 2 0 0 1-2 2h-10a2 2 0 0 1-2-2V5A2 2 0 0 1 2 3a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v8a2 2 0 0 1-1.998 2zM14 2H4a1 1 0 0 0-1 1h9.002a2 2 0 0 1 2 2v7A1 1 0 0 0 15 11V3a1 1 0 0 0-1-1zM2.002 4a1 1 0 0 0-1 1v8l2.646-2.354a.5.5 0 0 1 .63-.030l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094l1.777 1.947V5a1 1 0 0 0-1-1h-10z"/>
+                  </svg> Photos
+                </a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16">
+                  <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
+                  </svg> Archives</a>
+                  <ul class="dropdown-menu bg-dark pt-0" id="dropdown_archives">
+                    <li><a class="dropdown-item bg-dark text-white text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
+                    <li><a class="dropdown-item bg-dark text-white text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
+                  </ul>
+              </li>
+            </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="flex-shrink-0">
+      <div class="club my-2">
+        <h1 class="text-center">Le club</h1>
+        <div class="wrapper mx-1">
+          <article>
+            <div class="row no-gutters"> 
+              <div class="col">
+                <section class="creation_club">
+                  <div class="card">
+                    <div class="card-header text-center">Création du club</div>
+                    <div class="card-body mt-2 pt-2">
+                      <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
+                      <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+            <div class="row no-gutters"> 
+              <div class="col">
+                <section class="modif_club">
+                  <div class="card">
+                    <div class="card-header text-center">Modification du club</div>
+                    <div class="card-body mt-2 pt-2">
+                      <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
+                      <p class="card-text text-decoration-underline">Tarif adhésion club :</p>
+                      <p class="card-text"><strong><mark> 20€</strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
+                      <p class="card-text"> Concernant le challenge UFOLEP vous trouverez toutes les informations sur le site
+                        <a href="http://www.ufocross.caubet.eu/"> Ufocross.</a>
+                      </p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+            <div class="row no-gutters"> 
+              <div class="col">
+                <section class="statuts_club">
+                  <div class="card">
+                    <div class="card-header text-center text-danger">📜 Les statuts du club 📜</div>
+                    <div class="card-body">
+                      <ul class="list-group mt-2">
+                        <li class="list-group-item"><h5>Président :</h5>
+                          <p><b>SAINT-JOLY</b> Jean pierre <a href="mailto:j.pierrejoly@sfr.fr">📧</a></p>
+                        </li>
+                        <li class="list-group-item"><h5>Vices Président :</h5>
+                          <p><b>PEREZ</b> Louis <br> & <br> <b>VERGE</b> Gérard </p>
+                        </li>
+                        <li class="list-group-item"><h5>Trésorier :</h5>
+                          <p><b>SAINT-JOLY</b> Stéphan <a href="mailto:migdle@hotmail.com">📧</a></p>
+                        </li>
+                        <li class="list-group-item"><h5>Secrétaire :</h5>
+                          <p><b>VERGE</b> Elisabeth</p>
+                        </li>
+                        <li class="list-group-item"><h5>Conseillers Technique :</h5>
+                          <p><b>VIGNAUX</b> Michel <br> & <br> <b>GIROLA</b> Joël</p>
+                        </li>
+                        <li class="list-group-item"><h5>Formateur :</h5>
+                          <p><b>VERGE</b> Gérard</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </main>
+  </div>
   <footer class="footer bg-dark text-light mt-auto ">
     <div class="container pt-2">
       <div class="row justify-content-center">
-        <div class="col-6 ">
+        <div class="col-6">
           <div class="contact text-center">
             <span>Retrouvez-nous sur :</span>
             <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
