--- a/Index/contact.html
+++ b/Index/contact.html
@@ -9,98 +9,111 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
   <title>Amicale Motos Cyclos Occitanie</title>
-  <meta name="description" content="Retrouvez toutes les photos du site de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
+  <meta name="description" content="formulaire de contact de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
-<header>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="text-warning mx-auto pb-2"  id="home" href="/index/accueil.html"> 
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-caret-left-square" viewBox="0 0 16 16">
-        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-        <path d="M10.205 12.456A.5.5 0 0 0 10.5 12V4a.5.5 0 0 0-.832-.374l-4.5 4a.5.5 0 0 0 0 .748l4.5 4a.5.5 0 0 0 .537.082z"/>
-      </svg> Accueil
-    </a>    
-  </nav>
-</header>
 <body class="d-flex flex-column">
-  <main class="flex-shrink-0">
-    <div class="container mb-2">
-      <section>
-        <div class="contact_page mx-1">
-          <h1 class="text-center my-2 pb-4">Page de contact</h1>
-          <div class="formulaire">
-            <form class="needs-validation pt-1" novalidate>
-              <div class="form-group col-8 m-auto">
-                <label for="nom" class="form-label">Nom de famille</label>
-                <input type="text" class="form-control" id="nom" placeholder="Dupont" required>
-                <div class="valid-feedback">
-                  Ok
-                </div>
-              </div>
-              <div class="form-group col-8 m-auto">
-                <label for="surname" class="form-label">Prénom</label>
-                <input type="text" class="form-control" id="surname" placeholder="Marc" required>
-                <div class="valid-feedback">
-                  Ok
-                </div>
-              </div>
-              <div class="form-group col-10 m-auto">
-                <label for="mail" class="form-label">Adresse e-mail</label>
-                <div class="input-group has-validation">
-                  <span class="input-group-text" id="inputGroupPrepend">@</span>
-                  <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required>
-                  <div class="invalid-feedback">
-                    Veuillez rentrer une adresse mail valide
-                  </div>
-                </div>
-              </div> 
-              <div class="form-group col-5 m-auto">
-                <label for="cp">Code postal</label>
-                <input type="number" class="form-control" id="cp" placeholder="31000" required>
-                <div class="invalid-feedback">
-                  Précisez un code postal valide.
-                </div>
-              </div>
-              <div class="form-group col-8 m-auto">
-                <label for="ville" class="form-label">Ville</label>
-                <input type="text" class="form-control" id="ville" placeholder="Toulouse" required>
-                <div class="invalid-feedback">
-                Précisez une ville
-                </div>
-              </div>
-              <div class="form-group col-12 m-auto">
-                <label for="FormControlContactMessage">Message</label>
-                <textarea class="form-control" id="FormControlContactMessage" rows="3"></textarea>                
-              </div>
-              <div class="form-group col-8 m-auto pt-2">
-                <div class="form-check form-check-inline col-6">
-                  <input class="form-check-input" type="checkbox" id="moto_checkbox1" value="option1">
-                  <label class="form-check-label" for="moto_checkbox1">Moto</label>
-                </div>
-                <div class="form-check form-check-inline col-4">
-                  <input class="form-check-input" type="checkbox" id="vtt_checkbox2" value="option2">
-                  <label class="form-check-label" for="vtt_checkbox2">Vtt</label>
-                </div>
-              </div>
-              <div class="form-group col-10 pt-3">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="condition_check" required>
-                  <label class="form-check-label" for="condition_check">
-                    <a href="/Index/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
-                  </label>
-                  <div class="invalid-feedback">
-                    Vous devez accepter les conditions avant de valider.
-                  </div>
-                </div>
-              </div>
-              <div class="button">
-                <button class="btn btn-success" type="submit">Valider le formulaire</button>
-              </div>
-            </form>
-          </div>
+  <div class="container px-0">
+    <header>
+      <nav class="navbar navbar-dark bg-dark">
+        <div class="row no-gutters m-auto ">
+          <div class="col">
+            <a class="text-warning mx-auto pb-2"  id="home" href="/index/accueil.html"> 
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-caret-left-square" viewBox="0 0 16 16">
+                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                <path d="M10.205 12.456A.5.5 0 0 0 10.5 12V4a.5.5 0 0 0-.832-.374l-4.5 4a.5.5 0 0 0 0 .748l4.5 4a.5.5 0 0 0 .537.082z"/>
+              </svg> Accueil
+            </a> 
+          </div>   
         </div>
-      </section>
-    </div>
-  </main>
+      </nav>
+    </header>
+    <main class="flex-shrink-0">
+      <div class="contact_page my-2">
+        <h1 class="text-center">Contact</h1>
+        <div class="wrapper mx-1">
+          <article>
+            <div class="row no-gutters"><!--contact page-->
+              <div class="col">
+                <section>
+                  <h1 class="text-center my-2 pb-4">Page de contact</h1>
+                  <div class="formulaire">
+                      <form class="needs-validation pt-1" novalidate>
+                        <div class="form-group col-8 m-auto">
+                          <label for="nom" class="form-label">Nom de famille</label>
+                          <input type="text" class="form-control" id="nom" placeholder="Dupont" required>
+                          <div class="valid-feedback">
+                            Ok
+                          </div>
+                        </div>
+                        <div class="form-group col-8 m-auto">
+                          <label for="surname" class="form-label">Prénom</label>
+                          <input type="text" class="form-control" id="surname" placeholder="Marc" required>
+                          <div class="valid-feedback">
+                            Ok
+                          </div>
+                        </div>
+                        <div class="form-group col-10 m-auto">
+                          <label for="mail" class="form-label">Adresse e-mail</label>
+                          <div class="input-group has-validation">
+                            <span class="input-group-text" id="inputGroupPrepend">@</span>
+                            <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required>
+                            <div class="invalid-feedback">
+                              Veuillez rentrer une adresse mail valide
+                            </div>
+                          </div>
+                        </div> 
+                        <div class="form-group col-5 m-auto">
+                          <label for="cp">Code postal</label>
+                          <input type="number" class="form-control" id="cp" placeholder="31000" required>
+                          <div class="invalid-feedback">
+                            Précisez un code postal valide.
+                          </div>
+                        </div>
+                        <div class="form-group col-8 m-auto">
+                          <label for="ville" class="form-label">Ville</label>
+                          <input type="text" class="form-control" id="ville" placeholder="Toulouse" required>
+                          <div class="invalid-feedback">
+                          Précisez une ville
+                          </div>
+                        </div>
+                        <div class="form-group col-12 m-auto">
+                          <label for="FormControlContactMessage">Message</label>
+                          <textarea class="form-control" id="FormControlContactMessage" rows="3"></textarea>                
+                        </div>
+                        <div class="form-group col-8 m-auto pt-2">
+                          <div class="form-check form-check-inline col-6">
+                            <input class="form-check-input" type="checkbox" id="moto_checkbox1" value="option1">
+                            <label class="form-check-label" for="moto_checkbox1">Moto</label>
+                          </div>
+                          <div class="form-check form-check-inline col-4">
+                            <input class="form-check-input" type="checkbox" id="vtt_checkbox2" value="option2">
+                            <label class="form-check-label" for="vtt_checkbox2">Vtt</label>
+                          </div>
+                        </div>
+                        <div class="form-group col-10 pt-3">
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="condition_check" required>
+                            <label class="form-check-label" for="condition_check">
+                              <a href="/Index/conditions.html" target="blank" id="condition_accept">Lire et accepter les conditions</a> 
+                            </label>
+                            <div class="invalid-feedback">
+                              Vous devez accepter les conditions avant de valider.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="button">
+                          <button class="btn btn-success" type="submit">Valider le formulaire</button>
+                        </div>
+                      </form>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </main>
+  </div>
   <footer class="footer bg-dark text-light mt-auto">
     <div class="container pt-3">
       <div class="row justify-content-center text-center">
@@ -134,4 +147,3 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
-</html>
